[package]
name = "autt"
description = "Audio Test Tools"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
lexpr = "0.2.7"
ringbuf = "0.4.8"
indicatif = "0.18.0"
eframe = "0.32.1"
egui-plotter = "0.6.0"
plotters = "0.3.7"

[[bin]]
name = "autt"
